--- a/TODO.txt
+++ b/TODO.txt
@@ -2,10 +2,13 @@
 Overall
 -. filter visualizations
     - built into basemodel, or as a script under utilities/general
--. Data-derived uncertainty prediction - predict p(sigma|x)
+x. option to log gradients
+-. option to log weights distributions -- and subsets
+
 
 Segmentation
--. Change resnet model to programatically create the model
+x. Change resnet model to programatically create the model
+-. Epistemic uncertainty mode in SegmentationBaseModel
 -. Implement real FCN-8s model
 
 
@@ -13,3 +16,8 @@ Generative
 -. Adversarial autoencoder
 -. Supervised autoencoder
 -. Prior factory, like the one from OpenAI InfoGAN code
+
+
+Multi
+-. Multi instance classification model
+-. Bayesian inference mode
