Add DenseNet model
- Add experiment script for DenseNet
- Removed saturation and contrast augmentation from ImageComboDataSet
- Pretty up the printing functions in basemodel

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,8 @@ Segmentation
 x. Change resnet model to programatically create the model
 -. Epistemic uncertainty mode in SegmentationBaseModel
 -. Implement real FCN-8s model
+-. Intermediate segmentation endpoints (y_hat_1, y_hat_2, etc.)
+-. DenseNet / DenseNet with skips
 
 
 Generative
